#2 fix dropdown text overflow

--- a/src/Telemedicine.Web/Content/less/layout3.less
+++ b/src/Telemedicine.Web/Content/less/layout3.less
@@ -90,6 +90,9 @@ body {
             border-radius: 1.5em;
             width: 100%;
             text-align: left;
+            overflow:hidden;
+            text-overflow:ellipsis;
+            padding-right:2em;
 
             .caret {
                 position: absolute;
